add alembic/env and do some changes at db_conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
     volumes:
       - .:/app
     ports:
-      -8000:8000
+      - 8000:8000
+    restart: always
     depends_on:
       - db
     
